--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -956,15 +956,6 @@ the form-control fails to do that so we do the border ourselves */
     }
 }
 
-/* don't register clicks with the fontawesome icons
- * this way the click event is registered by the parent and all is well
- */
-.far,
-.fas,
-.fab, {
-    pointer-events: none;
-}
-
 .clickable:hover,
 .editable:hover,
 [data-action] {
@@ -977,11 +968,16 @@ the form-control fails to do that so we do the border ourselves */
     transition: color 0.8s ease;
 }
 
-/* font awesome icons color */
+/*
+ * font awesome icons color
+ * don't register clicks with the fontawesome icons
+ * this way the click event is registered by the parent and all is well
+ */
 .far,
 .fas,
 .fab {
     color: $medium;
+    pointer-events: none;
 }
 
 .fa-bell.active {
@@ -1143,6 +1139,14 @@ input[type='color'] {
     &.ucp-align {
         margin-top: 0.5rem;
     }
+
+    &.disabled {
+        opacity: 0.7;
+
+        .slider {
+            cursor: default;
+        }
+    }
 }
 
 /* The slider */
@@ -1168,10 +1172,6 @@ input[type='color'] {
         transition: 355ms;
         width: 18px;
     }
-}
-
-.slider-label-deactivated {
-    color: $medium;
 }
 
 input:checked + .slider {
