--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -195,15 +195,17 @@
 
 <hr>
 
-<!-- CHEM EDITOR -->
+{# CHEM EDITOR #}
 <h3 data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-right fa-fw mr-2'></i>{{ 'Molecule editor'|trans }}</h3>
 <div id='chemDiv' hidden data-save-hidden='chemDiv' class='mt-2 mb-2 chemdoodle'>
+  {# chemdoodle #}
   <div>
     <canvas id='sketcher'></canvas>
   </div>
   <div class='mt-3'>
     <button class='btn btn-primary mr-3' data-filetype='chemjson' data-action='save-chem-as-file'>{{ 'Save as JSON'|trans }}</button>
-    <button class='btn btn-primary' data-filetype='png' data-action='save-chem-as-file'>{{ 'Save as image'|trans }}</button>
+    <button class='btn btn-primary mr-3' data-filetype='png' data-action='save-chem-as-file'>{{ 'Save as image'|trans }}</button>
+    <button class='btn btn-primary mr-3' data-filetype='rxn' data-action='save-chem-as-file'>{{ 'Save as RXN'|trans }}</button>
   </div>
 </div>
 
