--- a/src/templates/create-idp-modal.html
+++ b/src/templates/create-idp-modal.html
@@ -10,7 +10,7 @@
       </div>
       <div id='createIdpForm' class='modal-body' data-wait='{{ 'Please wait…' }}'>
         <div class='d-flex justify-content-between'>
-          <label for='name' class='col-form-label'>{{ 'Friendly Name'|trans }}</label>
+          <label for='name' class='col-form-label'>{{ 'Friendly name'|trans }}</label>
           <input class='form-control col-md-4' type='text' placeholder='Acme Looniversity' id='name' name='name' required />
         </div>
         <hr>
