add missing translation

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -392,7 +392,7 @@
     <hr>
   </div>
 
-  <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Bruteforce login protection' }}</h3>
+  <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Bruteforce login protection'|trans }}</h3>
   <div id='bruteforceDiv' class='pl-3'>
     <div class='d-flex justify-content-between'>
       <span>{{ '%d users are currently prevented from logging in from unknown devices.'|trans|format(nologinUsersCount) }}</span>
